// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a blank web-card 1`] = `
Object {
  "body": Object {
    "id": 2,
    "prevId": null,
    "text": "[]
",
    "userId": "bot",
  },
  "bodyId": 2,
  "id": 2,
  "link": Object {
    "domain": "test1.com",
    "extra": Object {
      "domain": "test1.com",
      "resolvedUrl": "http://test1.com",
      "srcType": "OTHER",
    },
    "id": 2,
    "oauthorName": null,
    "srcId": null,
    "srcType": "OTHER",
    "url": "http://test1.com",
  },
  "linkUrl": "http://test1.com",
  "meta": Object {
    "conn": Object {},
  },
  "template": "WEBPAGE",
}
`;

exports[`create a nested web-card 1`] = `
Array [
  Object {
    "linenumber": 0,
    "marker": Object {
      "mark": "[=]",
    },
    "str": "[=]",
  },
  Object {
    "linenumber": 1,
    "marker": Object {
      "mark": "[?:poll]",
    },
    "str": "[?:poll]",
  },
  Object {
    "commentId": 3,
    "linenumber": 1,
    "marker": Object {
      "mark": "[?:poll]",
      "value": "<買> vs <賣>",
    },
    "poll": true,
    "pollId": 3,
    "stampId": "%i61",
    "str": " <買> vs <賣>",
  },
  Object {
    "linenumber": 2,
    "marker": Object {
      "mark": "[+]",
    },
    "str": "[+]",
  },
  Object {
    "linenumber": 3,
    "marker": Object {
      "mark": "[-]",
    },
    "str": "[-]",
  },
  Object {
    "linenumber": 4,
    "marker": Object {
      "mark": "[VS]",
    },
    "str": "[VS]",
  },
  Object {
    "linenumber": 5,
    "marker": Object {
      "mark": "[VS]",
      "value": "- [[<$AAA> vs <$BBB>]]",
    },
    "new": true,
    "stampId": "%vYk",
    "str": "- [[<$AAA> vs <$BBB>]]",
  },
  Object {
    "linenumber": 6,
    "marker": Object {
      "mark": "[VS]",
      "value": "- [[<$AAA> vs <$CCC>]]",
    },
    "new": true,
    "stampId": "%vjo",
    "str": "- [[<$AAA> vs <$CCC>]]",
  },
  Object {
    "linenumber": 7,
    "marker": Object {
      "mark": "[Q]",
    },
    "str": "[Q]",
  },
]
`;

exports[`create a nested web-card 2`] = `
Array [
  Object {
    "linenumber": 0,
    "marker": Object {
      "mark": "[=]",
    },
    "nestedCard": undefined,
    "str": "[=]",
  },
  Object {
    "linenumber": 1,
    "marker": Object {
      "mark": "[?:poll]",
    },
    "nestedCard": undefined,
    "str": "[?:poll]",
  },
  Object {
    "broken": true,
    "linenumber": 1,
    "marker": Object {
      "mark": "[?:poll]",
      "value": "<買> vs <賣>",
    },
    "nestedCard": undefined,
    "stampId": "%i61",
    "str": " <買> vs <賣> %i61",
  },
  Object {
    "linenumber": 2,
    "marker": Object {
      "mark": "[+]",
    },
    "nestedCard": undefined,
    "str": "[+]",
  },
  Object {
    "linenumber": 3,
    "marker": Object {
      "mark": "[+]",
      "value": "@ARK開倉",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": undefined,
    "srcStamp": "%Hfx",
    "stampId": "%Kci",
    "str": "@ARK開倉 %Kci",
  },
  Object {
    "linenumber": 4,
    "marker": Object {
      "mark": "[+]",
      "value": "@巴菲特2020Q4加倉",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": undefined,
    "srcStamp": "%xB7",
    "stampId": "%00Y",
    "str": "@巴菲特2020Q4加倉 %00Y",
  },
  Object {
    "linenumber": 5,
    "marker": Object {
      "mark": "[-]",
    },
    "nestedCard": undefined,
    "str": "[-]",
  },
  Object {
    "linenumber": 6,
    "marker": Object {
      "mark": "[VS]",
    },
    "nestedCard": undefined,
    "str": "[VS]",
  },
  Object {
    "linenumber": 7,
    "marker": Object {
      "mark": "[VS]",
      "value": "- [[<$AAA> vs <$BBB>]]",
    },
    "nestedCard": undefined,
    "new": true,
    "stampId": "%vYk",
    "str": "- [[<$AAA> vs <$BBB>]] %vYk",
  },
  Object {
    "linenumber": 8,
    "marker": Object {
      "mark": "[VS]",
      "value": "- [[<$AAA> vs <$CCC>]]",
    },
    "nestedCard": undefined,
    "new": true,
    "stampId": "%vjo",
    "str": "- [[<$AAA> vs <$CCC>]] %vjo",
  },
  Object {
    "linenumber": 9,
    "marker": Object {
      "mark": "[Q]",
    },
    "nestedCard": undefined,
    "str": "[Q]",
  },
  Object {
    "linenumber": 11,
    "marker": Object {
      "mark": "[~]",
    },
    "nestedCard": undefined,
    "str": "[~]",
  },
  Object {
    "linenumber": 12,
    "marker": Object {
      "mark": "[~]",
      "value": "[[生物技術]]",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": undefined,
    "srcStamp": "%nhh",
    "stampId": "%7Wi",
    "str": "[[生物技術]] %7Wi",
  },
]
`;

exports[`create a symbol-card 1`] = `
Object {
  "body": Object {
    "id": 1,
    "prevId": null,
    "text": "[{\\"linenumber\\":0,\\"str\\":\\"[=]\\",\\"marker\\":{\\"mark\\":\\"[=]\\"}},{\\"linenumber\\":1,\\"str\\":\\"[?:poll]\\",\\"marker\\":{\\"mark\\":\\"[?:poll]\\"}},{\\"linenumber\\":1,\\"str\\":\\" <買> vs <賣>\\",\\"marker\\":{\\"mark\\":\\"[?:poll]\\",\\"value\\":\\"<買> vs <賣>\\"},\\"stampId\\":\\"%hF7\\",\\"poll\\":true,\\"pollId\\":2,\\"commentId\\":2},{\\"linenumber\\":2,\\"str\\":\\"[+]\\",\\"marker\\":{\\"mark\\":\\"[+]\\"}},{\\"linenumber\\":3,\\"str\\":\\"[-]\\",\\"marker\\":{\\"mark\\":\\"[-]\\"}},{\\"linenumber\\":4,\\"str\\":\\"[VS]\\",\\"marker\\":{\\"mark\\":\\"[VS]\\"}},{\\"linenumber\\":5,\\"str\\":\\"- [[<$AAA> vs <$BBB>]]\\",\\"marker\\":{\\"mark\\":\\"[VS]\\",\\"value\\":\\"- [[<$AAA> vs <$BBB>]]\\"},\\"new\\":true,\\"stampId\\":\\"%3qR\\"},{\\"linenumber\\":6,\\"str\\":\\"- [[<$AAA> vs <$CCC>]]\\",\\"marker\\":{\\"mark\\":\\"[VS]\\",\\"value\\":\\"- [[<$AAA> vs <$CCC>]]\\"},\\"new\\":true,\\"stampId\\":\\"%3Wx\\"},{\\"linenumber\\":7,\\"str\\":\\"[Q]\\",\\"marker\\":{\\"mark\\":\\"[Q]\\"}}]
[=]
[?:poll] <買> vs <賣> %hF7
[+]
[-]
[VS]
- [[<$AAA> vs <$BBB>]] %3qR
- [[<$AAA> vs <$CCC>]] %3Wx
[Q]
",
    "userId": "bot",
  },
  "bodyId": 1,
  "id": 1,
  "link": Object {
    "domain": "_",
    "extra": null,
    "id": 1,
    "oauthorName": null,
    "srcId": null,
    "srcType": "OTHER",
    "url": "//$AA",
  },
  "linkUrl": "//$AA",
  "meta": Object {
    "conn": Object {
      "[?:poll]": Object {
        "commentId": 2,
        "poll": true,
        "pollChoices": Array [
          "買",
          "賣",
        ],
        "pollId": 2,
      },
    },
    "symbol": "$AA",
  },
  "template": "TICKER",
}
`;

exports[`create a symbol-card 2`] = `
Array [
  Object {
    "linenumber": 0,
    "marker": Object {
      "mark": "[=]",
    },
    "str": "[=]",
  },
  Object {
    "linenumber": 1,
    "marker": Object {
      "mark": "[?:poll]",
    },
    "str": "[?:poll]",
  },
  Object {
    "commentId": 2,
    "linenumber": 1,
    "marker": Object {
      "mark": "[?:poll]",
      "value": "<買> vs <賣>",
    },
    "poll": true,
    "pollId": 2,
    "stampId": "%hF7",
    "str": " <買> vs <賣>",
  },
  Object {
    "linenumber": 2,
    "marker": Object {
      "mark": "[+]",
    },
    "str": "[+]",
  },
  Object {
    "linenumber": 3,
    "marker": Object {
      "mark": "[-]",
    },
    "str": "[-]",
  },
  Object {
    "linenumber": 4,
    "marker": Object {
      "mark": "[VS]",
    },
    "str": "[VS]",
  },
  Object {
    "linenumber": 5,
    "marker": Object {
      "mark": "[VS]",
      "value": "- [[<$AAA> vs <$BBB>]]",
    },
    "new": true,
    "stampId": "%3qR",
    "str": "- [[<$AAA> vs <$BBB>]]",
  },
  Object {
    "linenumber": 6,
    "marker": Object {
      "mark": "[VS]",
      "value": "- [[<$AAA> vs <$CCC>]]",
    },
    "new": true,
    "stampId": "%3Wx",
    "str": "- [[<$AAA> vs <$CCC>]]",
  },
  Object {
    "linenumber": 7,
    "marker": Object {
      "mark": "[Q]",
    },
    "str": "[Q]",
  },
]
`;

exports[`create connected items 1`] = `
Object {
  "[?:poll]": Object {
    "commentId": 1,
    "poll": true,
    "pollChoices": Array [
      "買",
      "賣",
    ],
    "pollId": 1,
  },
}
`;

exports[`edit an existed web-card 1`] = `
Object {
  "body": Object {
    "id": 3,
    "prevId": 2,
    "text": "[{\\"linenumber\\":0,\\"str\\":\\"[*]\\",\\"marker\\":{\\"mark\\":\\"[*]\\"}},{\\"linenumber\\":1,\\"str\\":\\"2021年會有進一步財政刺激\\",\\"marker\\":{\\"mark\\":\\"[*]\\",\\"value\\":\\"2021年會有進一步財政刺激\\"},\\"stampId\\":\\"%5uM\\",\\"anchorId\\":1,\\"userId\\":\\"aaa\\"},{\\"linenumber\\":2,\\"str\\":\\"歷年有1月效應，1月份呈現反彈，但不認為\\",\\"marker\\":{\\"mark\\":\\"[*]\\",\\"value\\":\\"歷年有1月效應，1月份呈現反彈，但不認為\\"},\\"stampId\\":\\"%Bv0\\",\\"anchorId\\":2,\\"userId\\":\\"aaa\\"}]
[*]
2021年會有進一步財政刺激 %5uM
歷年有1月效應，1月份呈現反彈，但不認為 %Bv0",
    "userId": "aaa",
  },
  "bodyId": 3,
  "id": 2,
  "linkUrl": "http://test1.com",
  "meta": Object {
    "conn": Object {},
  },
  "template": "WEBPAGE",
}
`;
